--- a/index.html
+++ b/index.html
@@ -13,7 +13,53 @@
     <title>Niagahoster</title>
 </head>
 <body id="page-top">
-    <header>
+    <div class="container">
+        <header>
+            <div class="left">
+                <i class="fas fa-tag"></i>
+                <a>Gratis ebook 9 Cara Cerdas Menggunakan Domain [x]</a>
+            </div>
+            <div class="right">
+                <div class="icon">
+                    <i class="fas fa-phone-alt"></i>
+                    <a>0274-5305505</a>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-comments"></i>
+                    <a>Live Chat</a>
+                </div>
+                <div class="icon">
+                    <i class="fas fa-user-circle"></i>
+                    <a>Member Area</a>
+                </div>
+            </div>
+        </header>
+    </div>
+        <!-- <hr> -->
+        <nav class="container">
+            <img src="./assets/images/logo-niagahoster.png" alt="" width="230px">
+            <button class="menu-toggler">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="link">
+                <ul>
+                    <li><a href="#">Hosting</a></li>
+                    <li><a href="#">Domain</a></li>
+                    <li><a href="#">Server</a></li>
+                    <li><a href="#">Website</a></li>
+                    <li><a href="#">Afiliasi</a></li>
+                    <li><a href="#">Promo</a></li>
+                    <li><a href="#">Pembayaran</a></li>
+                    <li><a href="#">Riview</a></li>
+                    <li><a href="#">Kontak</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+            </div>
+        </nav>
+
+    <!-- <header>
         <section class="menu1">
             <nav class="navbar navbar-expand-lg navbar-light p-0">
                 <div class="container">
@@ -85,7 +131,7 @@
                 </div>
             </nav>
         </section>
-    </header>
+    </header> -->
 
     <section class="jumbotron1">
         <div class="container">
@@ -609,7 +655,7 @@
 
 
 
-
+    <script src="assets/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
