--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
             <div class="left">
                 <i class="fas fa-tag"></i>
-                <a>Gratis ebook 9 Cara Cerdas Menggunakan Domain [x]</a>
+                <a style="color: #29a3f5;">Gratis ebook 9 Cara Cerdas Menggunakan Domain [x]</a>
             </div>
             <div class="right">
                 <div class="icon">
@@ -35,7 +35,7 @@
             </div>
         </header>
     </div>
-        <!-- <hr> -->
+        <hr>
         <nav class="container">
             <img src="./assets/images/logo-niagahoster.png" alt="" width="230px">
             <button class="menu-toggler">
@@ -58,6 +58,7 @@
                 </ul>
             </div>
         </nav>
+        <hr>
 
     <!-- <header>
         <section class="menu1">
@@ -324,7 +325,7 @@
     </div>
 
     <section class="jumbotron4">
-        <div class="container pt-md-5 pb-md-5">
+        <div class="container pt-md-5 pb-md-5 mt-4">
             <h4>Powerfull dengan Limit PHP yang Lebih Besar</h4>
             <div class="table">
                 <div class="tr">
@@ -342,7 +343,7 @@
     </section>
 
     <section class="jumbotron5">
-        <div class="container pt-md-5 pb-md-5">
+        <div class="container pt-md-4 pb-md-5">
             <h4>Semua Paket Hosting Sudah Termasuk</h4>
             <div class="row pt-md-4 pb-md-4">
                 <div class="paket-hosting col-md-4 pt-md-4">
@@ -484,7 +485,7 @@
                         </div>
                     </div>
             </div>
-            <div class="row mt-md-5 mb-md-4">
+            <div class="row mt-md-5 mb-md-5">
                 <div class="col button text-center">
                     <button type="button" class="btn btn-primary center-block">Selengkapnya</button>
                 </div>
